--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
   <p> Books which i finished read (I will be glad if you recommend any more books)</p>
 
-  <p>  It's my finished projects:</p>
+  <p>It's my projects:</p>
 
-  <p>  Contact me:</p>
+  <p>Contact me:</p>
   <ul>
     <li>http://t.me/levgogol</li>
     <li><a href="mailto:levgogol@gmail.com">Задавайте </a></li>
