--- a/index.html
+++ b/index.html
@@ -31,19 +31,28 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <p>I am a student of the last courses in <b>program engineer</b>. I have good skills in <b>mathematics</b> and <b>algorithms</b>, and I often use them. I like to discuss and read about <b>application architecture</b>. Used to using <b>UML</b> for starting and development projects. <b>C#</b> is my favorite language)</p>
-  <p>I spent a lot of time in <b>Unity</b> and I really enjoy making games. I really want to get into the team because it is interesting to create a successful game to gain experience and not be responsible for marketing, sound, etc.</p>
-  <p>At the moment, I am a full-time programmer in EME company. Here i use the <b>Irrlicht</b> and <b>analytic geometry</b>. Starting use a <b>Graphics Shaders</b>. Also i'm looking a subject of dissertation for an university. Chose between <b>swarm intelligence</b> and something realtime <b>vfx</b> trick. But i'm open to any suggestions.</p>
+  <p>I am third year student. I study in a <b>software engineering</b> direction. I have a good skills in <b>mathematics</b> and <b>algorithms</b>, and I often use them. I like to discuss and read about <b>application architecture</b>. I usually using <b>UML</b> for development projects. <b>C#</b> is my favorite language)</p>
+  <p>I have spent a lot of time in <b>Unity</b> development. I really enjoy making games. I extremely want to get into the team because it is interesting to create a successful game and gain experience from that. And it's much better to not be responsible for marketing, sound and etc.</p>
+  <p>At this moment, I am a full-time programmer in EME company. I use the <b>Irrlicht</b> and <b>analytic geometry</b> here. I am starting to implement <b>graphic shaders</b> in my projects. Also i'm looking for a dissertation subject for an university. I choose between <b>swarm intelligence</b> and something realtime <b>vfx</b> trick. But i'm open for any suggestions.</p>
 
-  <p> Books which i finished read (I will be glad if you recommend any more books)</p>
+ <!-- <p>Books I read (I will be glad if you recommend me some more books):</p>
 
-  <p>It's my projects:</p>
+  <p>These are my projects.:</p>-->
 
   <p>Contact me:</p>
   <ul>
-    <li>http://t.me/levgogol</li>
-    <li><a href="mailto:levgogol@gmail.com">Задавайте </a></li>
-    <li>https://vk.com/levgogol</li>
+    <li>
+      <p><a href="http://t.me/levgogol"><img src="img/telegram.png" width="32"
+                                      height="32" border="0"></a></p>
+    </li>
+    <li>
+      <p><a href="mailto:levgogol@gmail.com"><img src="img/email.png" width="32"
+                                             height="32"></a></p>
+    </li>
+    <li>
+      <p><a href="https://vk.com/levgogol"><img src="img/vk.png" width="32"
+                                                  height="32"></a></p>
+      </li>
   </ul>
 </body>
 
