--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-  <div id = "Left"><img src="img/MyPhoto.png">
+  <div id = "Left">
+    <MyPhoto><img src="img/MyPhoto.png"></MyPhoto>
     <h2>Contact me:</h2>
 
     <a href="http://t.me/levgogol"><img src="img/telegram.png" width="48"
                                            height="48"></a>
 
-      <a href="mailto:levgogol@gmail.com"><img src="img/email.png" width="48"
+    <a href="mailto:levgogol@gmail.com"><img src="img/email.png" width="48"
                                                height="48"></a>
 
-      <a href="https://vk.com/levgogol"><img src="img/vk.png" width="48"
+    <a href="https://vk.com/levgogol"><img src="img/vk.png" width="48"
                                              height="48"></a></div>
   <div id = "content">
   <h2>About me:</h2>
