--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <div id = "Left">
-    <script src="/path/to/filatov.js"></script>
+    <script src="js/filatov.js"></script>
+    <script>
+    alert( 'Hello, world!' );
+   </script>
   </div>
   
   
