--- a/homeboy_ironsource_mraid.html
+++ b/homeboy_ironsource_mraid.html
@@ -39,6 +39,9 @@
         margin: 0;
         font-family: Arial;
         font-size: 17px;
+        -webkit-user-select: none;
+        -webkit-touch-callout: none;
+        touch-action: none;
       }
 
       img {
