--- a/homeboy_ironsource_mraid.html
+++ b/homeboy_ironsource_mraid.html
@@ -597,7 +597,7 @@
         audio.muted = window.muteByMraid && window.muteUntilFirstClick;
       }
 
-      window.muteByMraid = false;
+      window.muteByMraid = true;
       window.muteUntilFirstClick = true;
       doReadyCheck();
     </script>
