--- a/homeboy_ironsource_mraid.html
+++ b/homeboy_ironsource_mraid.html
@@ -595,7 +595,7 @@
       }
 
       function volumeChange(e) {
-        window.muteByMraid = !!e;
+        window.muteByMraid = !e;
         audio.muted = window.muteByMraid || window.muteUntilFirstClick;
       }
 
