--- a/homeboy_ironsource_mraid.html
+++ b/homeboy_ironsource_mraid.html
@@ -162,7 +162,7 @@
     <div class="allscreen">
       <button
         id="allscreenBtn"
-        onclick="{window.muteUntilFirstClick=false;tryToUnmute();if(isClickCount){tryToRedirect();}}"
+        onclick="{tryToUnmute();if(isClickCount){tryToRedirect();}}"
       ></button>
     </div>
     <script>
